--- a/static/user.html
+++ b/static/user.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="static/css/bootstrap.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="static/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>CV</title>
   </head>
   <body class="body-bg">
@@ -19,7 +19,7 @@
           <div class="row">
             <div class="foto-block col-lg-12 col-md-12 col-sm-6 col-xs-12">
               <img
-                src="./images/w1.jpg"
+                src="images/v1.jpg"
                 alt="Roman Dikiy"
                 class="img-thumbnail rounded-circle mt-3 mb-3"
               />
